# IT3180

./: .env.example  .gitignore  API_TESTING_GUIDE.md  Dockerfile.init  docker-compose.yml  init_db.py  init_db.sh  main.py  quick_test.sh  test_services.sh
api/: routes_auth.py
app/: main.py
app/authentication/database/: fake_db.py
authentication/: .env.example  Dockerfile  debug_db.py  main.py  migrate_db.py  models.py  pyproject.toml  requirements.txt
authentication/api/: routes_auth.py  routes_logs.py  routes_roles.py
authentication/core/: auth_bearer.py  config.py  permissions.py  security.py  security_demo.py  utils.py
authentication/database/: database.py
authentication/schemas/: auth_schema.py  log_schema.py  role_schema.py
backend/: Dockerfile  database.py  docker-compose.yml  init_db.py  main.py  pyproject.toml  requirements.txt  test_services.sh
backend/core/: auth_bearer.py  config.py  permissions.py  security.py  utils.py
backend/crud/: feedback.py
backend/migrations/: add_administrative_divisions.sql  init_db.sql
backend/models/: __init__.py  citizen.py  feedback.py  household.py  movement_log.py  neighborhood_group.py  province.py  temporary_record.py  user.py  ward.py
backend/routers/: auth.py  feedback.py  households.py  logs.py  residents.py  roles.py  statistics.py
backend/schemas/: auth.py  common.py  feedback.py  household.py  resident.py  role.py
backend/services/: household_service.py  resident_service.py
core/: auth_bearer.py  config.py  security.py  utils.py
database/: supabase_client.py
docs/: api_reference.md  database_schema.md
feedback/: .env.example  Dockerfile  database.py  main.py  pyproject.toml  reqbody.py  requirements.txt
feedback/core/: config.py  database.py  remote_auth.py
feedback/crud/: feedback.py  report.py
feedback/models/: __init__.py  feedback.py
feedback/routers/: feedback.py  report.py
feedback/schemas/: auth.py  common.py  feedback.py
feedback/services/: report_generator.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/api_caller/: openapi-port-8017.json  openapi-port-8018.json  openapi-port-8019.json  port8017.tsx  port8018.tsx  port8019.tsx
frontend/src/components/: Login.tsx
frontend/src/services/: auth-service.ts  feedback-service.ts  households-service.ts  logs-service.ts  residents-service.ts  roles-service.ts  statistics-service.ts
hokhau/: database.py  hk_router.py  main.py  schema.py
nhankhau/: database.py  main.py  nk_router.py  schema.py
residents/: .env.example  main.py  pyproject.toml  requirements.txt
residents/api/: households_router.py  residents_router.py
residents/core/: config.py  remote_auth.py
residents/models/: __init__.py  citizen.py  household.py  movement_log.py  temporary_record.py
residents/schemas/: auth.py  household.py  resident.py
residents/services/: household_service.py  resident_service.py
schemas/: auth_schema.py
(+39 files in other folders)
