[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=76"]

[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "argon2-cffi>=25.1.0",
  "asyncpg>=0.31.0",
  "bcrypt>=4.0.1,<4.1.0",
  "fastapi>=0.128.0",
  "httpx>=0.28.1",
  "passlib[bcrypt]>=1.7.4",
  "pydantic>=2.12.5",
  "pyjwt>=2.10.1",
  "python-dateutil>=2.9.0",
  "python-dotenv>=1.2.1",
  "python-multipart>=0.0.21",
  "sqlalchemy>=2.0.45",
  "uvicorn>=0.40.0",
]

[tool.setuptools.packages.find]
where = ["."]


[tool.ruff.lint]
select = [
  # Import sorting rules
  "I",
  # Pycodestyle rules (E, V)
  "E",
  # Tidy import rules
  "TID",
  # Perflint
  "PERF",
  # FastAPI specific rules
  "FAST",
]
ignore = [
  ### Intentionally disabled
  # module level import not at top of file
  "E402",
  # line too long
  "E501",
  # do not assign a lambda expression, use a def
  "E731",
  # incorrect-dict-iterator, flags valid Series.items usage
  "PERF102",
  # try-except-in-loop, becomes useless in Python 3.11
  "PERF203",
]

[tool.uv]
concurrent-downloads = 10 # prevents uv from consuming all the CPU by concurrently downloading packages

[tool.basedpyright]
pythonVersion = "3.10"
pythonPlatform = "Linux"
typeCheckingMode = "recommended"
reportUnusedVariable = "hint"
reportUnusedImport = "hint"
reportUnusedParameter = "hint"
reportUnusedExpression = "hint"
reportMissingTypeStubs = false
autoImportCompletions = true
reportAny = false
reportExplicitAny = false
